<?xml  version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.blogs.models.AppUser" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileActivity">

        <ImageView
            android:id="@+id/iv_profile"
            android:scaleType="fitXY"
            glideCircleImage="@{data.imageUrl}"
            android:src="@drawable/baseline_person_24"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@{data.username}"
                android:id="@+id/et_name"
                android:inputType="text"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:id="@+id/et_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:text="@{data.phone}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="@color/purple_200"
            android:layout_margin="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/btn_update" />


    </LinearLayout>
</layout>